CB-21466 Add xml validation unit test for all CM templates Add unit tests to check that value for applicable safty valves in template is well formed.

--- a/build.gradle
+++ b/build.gradle
@@ -108,6 +108,7 @@ allprojects {
         force "com.google.protobuf:protobuf-java:$protobufVersion"
         force "com.google.guava:guava:$guavaVersion"
         force "junit:junit:$junitVersion"
+        force "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:$jacksonVersion"
       }
     }
   }
