--- a/core/src/main/resources/application.yml
+++ b/core/src/main/resources/application.yml
@@ -564,8 +564,8 @@ cb:
           7.2.17 - Streams Messaging High Availability: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming-ha;
           7.2.17 - Streams Messaging Heavy Duty: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming;
           7.2.17 - Streams Messaging Light Duty: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming-small;
-          7.2.17 - Flow Management Light Duty with Apache NiFi, Apache NiFi Registry=cdp-flow-management-small;
-          7.2.17 - Flow Management Heavy Duty with Apache NiFi, Apache NiFi Registry=cdp-flow-management;
+          7.2.17 - Flow Management Light Duty with Apache NiFi, Apache NiFi Registry, Schema Registry=cdp-flow-management-small;
+          7.2.17 - Flow Management Heavy Duty with Apache NiFi, Apache NiFi Registry, Schema Registry=cdp-flow-management;
           7.2.17 - Data Discovery and Exploration=cdp-dde;
           7.2.17 - Search Analytics=cdp-search-analytics;
           7.2.17 - Streaming Analytics Light Duty with Apache Flink=cdp-flink-light;
@@ -588,8 +588,8 @@ cb:
           7.2.18 - Streams Messaging High Availability: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming-ha;
           7.2.18 - Streams Messaging Heavy Duty: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming;
           7.2.18 - Streams Messaging Light Duty: Apache Kafka, Schema Registry, Streams Messaging Manager, Streams Replication Manager, Cruise Control=cdp-streaming-small;
-          7.2.18 - Flow Management Light Duty with Apache NiFi, Apache NiFi Registry=cdp-flow-management-small;
-          7.2.18 - Flow Management Heavy Duty with Apache NiFi, Apache NiFi Registry=cdp-flow-management;
+          7.2.18 - Flow Management Light Duty with Apache NiFi, Apache NiFi Registry, Schema Registry=cdp-flow-management-small;
+          7.2.18 - Flow Management Heavy Duty with Apache NiFi, Apache NiFi Registry, Schema Registry=cdp-flow-management;
           7.2.18 - Data Discovery and Exploration=cdp-dde;
           7.2.18 - Search Analytics=cdp-search-analytics;
           7.2.18 - Streaming Analytics Light Duty with Apache Flink=cdp-flink-light;
