--- a/integration-test/build.gradle
+++ b/integration-test/build.gradle
@@ -129,6 +129,7 @@ dependencies {
 
   implementation group: 'org.kohsuke', name: 'wordnet-random-name', version: '1.5'
   implementation group: 'com.google.code.gson',          name: 'gson',                           version: gsonVersion
+  implementation (group: 'com.microsoft.azure',          name: 'azure',                          version: azureSdkVersion) { exclude group: 'org.slf4j' }
   implementation (group: 'com.google.apis',              name: 'google-api-services-compute',    version: 'v1-rev20230403-2.0.0'){
     exclude group: 'com.google.guava',  module: 'guava'
   }
@@ -138,10 +139,8 @@ dependencies {
   implementation (group: 'com.google.cloud',              name: 'google-cloud-storage',           version: '2.22.0') {
     exclude group: "io.grpc"
   }
-  implementation group: 'com.azure.resourcemanager',    name: 'azure-resourcemanager',                      version: azureSdkResourceManagerVersion
-  implementation group: 'com.azure.resourcemanager',    name: 'azure-resourcemanager-storage',              version: azureSdkResourceManagerVersion
-  implementation group: 'com.azure',                    name: 'azure-identity',                             version: azureSdkIdentityVersion
-  implementation group: 'com.azure',                    name: 'azure-storage-file-datalake',                version: azureSdkStorageDatalakeVersion
+  implementation group: 'com.microsoft.azure',           name: 'azure-storage',                  version: azureStorageSdkVersion
+  implementation group: 'com.microsoft.azure',           name: 'azure-data-lake-store-sdk',      version: '2.3.10'
 
   implementation group:  'org.springframework.boot',     name: 'spring-boot-starter',            version: springBootVersion
   implementation group:  'org.springframework.boot',     name: 'spring-boot-starter-test',       version: springBootVersion
