Revert "CB-21006 - DataHub - Flow changes to support mounting Ephemeral volumes & modify config for log and local directories for services on ClouderaManager."
This reverts commit 28685c12ddad3a37f3ff4809b8291d5ea4cf8ecb.

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -56,7 +56,7 @@ auth:
     datahub:
       runtime.upgrade.enable: true
       os.upgrade.enable: true
-      instancetypes.enable: true
+      instancetypes.enable: false
     ccmv2.enable: false
     ccmv2jumpgate.enable: false
     ccmv2.useOneWayTls: false
