CB-21704 CDP_AZURE_DATABASE_FLEXIBLE_SERVER entitlement to enable/disable flexible database server on Azure

--- a/mock-thunderhead/src/main/resources/application.yml
+++ b/mock-thunderhead/src/main/resources/application.yml
@@ -108,6 +108,7 @@ auth:
     cost.calculation.enable: true
     co2.calculation.enable: true
     enforce.aws.native.single.az.enabled: false
+    azure.database.flexibleserver.enabled: true
 crn:
   partition: cdp
   region: us-west-1
